# troll-detection

./: pyproject.toml
data-cleaning/: metootweets-cleanup.py  trolldata-cleaning.ipynb  wh-tweets-cleanup.py
data-scraping/: scraper.py
model/: kagglentbk.ipynb  model.ipynb
