[tool.poetry]
name = "troll-detection-model"
version = "0.1.0"
description = ""
authors = ["Leroy <leroy.souz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
evaluate = "^0.4.2"
numpy = "^1.26.4"
pandas = "^2.2.2"
torch = {version = "2.3.1+cu121", source = "torch"}
transformers = "^4.41.2"
langdetect = "^1.0.9"
scikit-learn = "^1.5.0"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
